--- a/adminSchedule.html
+++ b/adminSchedule.html
@@ -22,9 +22,11 @@
 
   <aside id="sideMenu" class="side-menu">
     <ul>
-      <li><a href="teacherRegister.html">تسجيل معلمة</a></li>
-      <li><a href="teacherUpdate.html">تحديث بيانات معلمة</a></li>
-      <li><a href="adminSchedule.html" class="active">إدارة الجداول</a></li>
+      <li><a href="adminRegister.html">تسجيل الطالبات الجدد</a></li>
+      <li><a href="adminUpdate.html">تحديث بيانات الطالبات</a></li>
+      <li><a href="teacherRegister.html">تسجيل معلمة جديدة</a></li>
+      <li><a href="teacherUpdate.html">تحديث بيانات المعلمة</a></li>
+      <li><a href="adminSchedule.html">إدارة الجداول</a></li>
       <li><a href="adminSubjects.html">إدارة المواد</a></li>
     </ul>
   </aside>
