--- a/adminUpdate.html
+++ b/adminUpdate.html
@@ -23,7 +23,11 @@
   <aside id="sideMenu" class="side-menu">
     <ul>
       <li><a href="adminRegister.html">تسجيل الطالبات الجدد</a></li>
-      <li><a href="adminUpdate.html" class="active">تحديث بيانات الطالبات</a></li>
+      <li><a href="adminUpdate.html">تحديث بيانات الطالبات</a></li>
+      <li><a href="teacherRegister.html">تسجيل معلمة جديدة</a></li>
+      <li><a href="teacherUpdate.html">تحديث بيانات المعلمة</a></li>
+      <li><a href="adminSchedule.html">إدارة الجداول</a></li>
+      <li><a href="adminSubjects.html">إدارة المواد</a></li>
     </ul>
   </aside>
   
